Fix image on mobile. Fix product card padding on mobile

--- a/css/cards.css
+++ b/css/cards.css
@@ -141,8 +141,15 @@ ul.card-grid {
 }
 
 .product-card__content {
-    padding: 100px 40px;
+    padding: 40px 40px;
 }
+
+@media (min-width: 600px) {
+    .product-card__content {
+        padding: 100px 40px;
+    }
+}
+
 h2.product-card__title {
     font-size: 2rem;
     font-weight: 800;
