--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ img {
 
 figure img {
     object-fit: cover;
-    min-width: 100%;
-    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /**
